--- a/app/src/main/res/layout/fragment_fixture.xml
+++ b/app/src/main/res/layout/fragment_fixture.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fixture_fragment_main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FixtureFragment">
@@ -10,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/prev_fixture_button"
