--- a/app/src/main/res/layout/fixture.xml
+++ b/app/src/main/res/layout/fixture.xml
@@ -12,6 +12,7 @@
         android:text="59'"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="?attr/colorPrimaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +30,7 @@
         android:text="borussia dortmund"
         android:textAlignment="textEnd"
         android:textSize="16sp"
+        android:textColor="?attr/colorPrimaryVariant"
         app:layout_constraintEnd_toStartOf="@id/team_home_logo"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +53,9 @@
         android:layout_centerInParent="true"
         android:layout_marginHorizontal="20dp"
         android:text="1-1"
-        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="?attr/colorPrimaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/elapsed" />
@@ -77,6 +79,7 @@
         android:maxLines="1"
         android:text="Chelsea"
         android:textSize="16sp"
+        android:textColor="?attr/colorPrimaryVariant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@id/team_away_logo"
