--- a/app/src/main/res/layout/fragment_league_player_standing.xml
+++ b/app/src/main/res/layout/fragment_league_player_standing.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:text="득점 순위"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorPrimaryVariant"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="순위"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -38,7 +38,7 @@
                 android:layout_weight="2.2"
                 android:text="선수"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -46,7 +46,7 @@
                 android:layout_weight="0.5"
                 android:text="득점"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -54,7 +54,7 @@
                 android:layout_weight="0.5"
                 android:text="도움"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -62,7 +62,7 @@
                 android:layout_weight="0.5"
                 android:text="슈팅"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -70,7 +70,7 @@
                 android:layout_weight="0.5"
                 android:text="PK"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -78,7 +78,7 @@
                 android:layout_weight="1"
                 android:text="유효 슈팅"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
         </LinearLayout>
 
@@ -95,7 +95,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
             android:text="도움 순위"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorPrimaryVariant"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="순위"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -117,7 +117,7 @@
                 android:layout_weight="2.2"
                 android:text="선수"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -125,7 +125,7 @@
                 android:layout_weight="0.5"
                 android:text="도움"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -133,7 +133,7 @@
                 android:layout_weight="0.5"
                 android:text="득점"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -141,7 +141,7 @@
                 android:layout_weight="0.5"
                 android:text="슈팅"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -149,7 +149,7 @@
                 android:layout_weight="0.5"
                 android:text="PK"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
             <TextView
                 android:layout_width="0dp"
@@ -157,7 +157,7 @@
                 android:layout_weight="1"
                 android:text="유효 슈팅"
                 android:textAlignment="center"
-                android:textColor="@color/gray_800" />
+                android:textColor="?attr/colorPrimaryVariant" />
 
         </LinearLayout>
 
