--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,13 +6,14 @@
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#1D1D1D</item>
+        <item name="colorSecondary">@color/black_800</item>
         <item name="colorSecondaryVariant">@color/gray_300</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/black_900</item>
+        <item name="appBarLayoutStyle">@color/black_900</item>
     </style>
 </resources>
