--- a/app/src/main/res/layout/fragment_fixture_detail_events.xml
+++ b/app/src/main/res/layout/fragment_fixture_detail_events.xml
@@ -6,7 +6,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_recyclerview"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/fixture_recycler_item_bg" />
 
 </LinearLayout>
